feat: reviews API; security hardening (CORS, rate limit, error handler, logger); SEO + JSON-LD; image config; dev scripts; docs; fix checkout JSON error; remove legacy JS

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,6 @@
-
 DB_HOST=127.0.0.1
 DB_USER=un533n_user
 DB_PASSWORD=secret
 DB_NAME=un533n
-DB_PORT=3306
 PORT=4000
-WHATSAPP_NUMBER=
-NODE_ENV=development
+WHATSAPP_NUMBER=+15551234567
