--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,12 +1,5 @@
-DB_HOST=127.0.0.1
-DB_USER=root
+DB_HOST=
+DB_USER=
 DB_PASSWORD=
-DB_NAME=un533n_db
-DB_PORT=3306
-
-PORT=4000
-
-# WhatsApp number in international format (numbers only, no + or spaces)
-WHATSAPP_NUMBER=15551234567
-
-NODE_ENV=development
+DB_NAME=
+WHATSAPP_NUMBER=
