--- a/backend/package.json
+++ b/backend/package.json
@@ -15,16 +15,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
-    "helmet": "^7.0.0",
-    "mysql2": "^3.15.3",
+    "express-rate-limit": "^6.10.0",
     "express-validator": "^7.0.1",
-    "express-rate-limit": "^6.10.0"
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.1",
+    "mysql2": "^3.15.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.4",
     "@types/helmet": "^0.0.48",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
